--- a/src/globals.css
+++ b/src/globals.css
@@ -1,4 +1,5 @@
 * {
+	outline: none;
 	margin: 0;
 	text-decoration: none;
 	box-sizing: border-box;
@@ -7,6 +8,25 @@
 }
 body {
 	background: #fdfdfd;
+}
+body.dark-background {
+	background: #44475a;
+}
+
+::-webkit-scrollbar {
+	width: 10px;
+	border-radius: 10px;
+	background-color: transparent;
+}
+
+::-webkit-scrollbar-track {
+	background-color: #383838;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background: #5a5e76;
+	box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
 }
 
 a {
@@ -27,6 +47,9 @@ a {
 }
 .block {
 	display: block;
+}
+.tcenter {
+	text-align: center;
 }
 .top0 {
 	top: 0;
@@ -255,10 +278,6 @@ a {
 	transform: scale(1, 1);
 }
 
-.main-app-layout {
-	padding: 10px;
-	margin: 0 10px;
-}
 .box {
 	position: relative;
 	background: #fff;
