--- a/src/globals.css
+++ b/src/globals.css
@@ -3,14 +3,17 @@
 	margin: 0;
 	text-decoration: none;
 	box-sizing: border-box;
-	font-family: 'narrow', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: 'narrow', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body {
 	background: #fdfdfd;
 }
 body.dark-background {
 	background: #44475a;
+}
+.fff {
+	color: #fff;
 }
 
 ::-webkit-scrollbar {
