--- a/src/globals.css
+++ b/src/globals.css
@@ -259,6 +259,24 @@ a {
 	font-family: 'league', system-ui, 'Segoe UI', Roboto, Oxygen, sans-serif;
 }
 
+.input.file {
+	position: relative;
+	overflow: hidden;
+	display: inline-block;
+}
+
+.input.file input[type='file'] {
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin: 0;
+	padding: 0;
+	font-size: 20px;
+	cursor: pointer;
+	opacity: 0;
+	filter: alpha(opacity=0);
+}
+
 .btn {
 	position: relative;
 	display: block;
