--- a/src/routes/unlimited-decks/[id]/common.css
+++ b/src/routes/unlimited-decks/[id]/common.css
@@ -1,130 +1,138 @@
 .cards-container {
-    display: grid;
-    grid-template-columns: repeat(4, 0fr);
-    gap: 25px 15px;
+	display: grid;
+	grid-template-columns: repeat(4, 0fr);
+	gap: 25px 15px;
 }
 
 .mega-container {
-    padding: 10px 0 80px 0;
+	padding: 10px 0 80px 0;
 }
 
-
 .separator {
-    width: 100%;
-    padding: 5px 20px;
-    text-align: center;
-    font-size: 1.2rem;
-    font-weight: 600;
-    margin: 20px 0;
+	width: 100%;
+	padding: 5px 20px;
+	text-align: center;
+	font-size: 1.2rem;
+	font-weight: 600;
+	margin: 20px 0;
 }
 
 .separator.hand {
-    background-color: #cddc39;
+	background-color: #cddc39;
 }
 .separator.discard {
-    background-color: #f3f3f3;
+	background-color: #f3f3f3;
 }
 .separator.deckinfo {
-    background-color: #ddb364;
+	background-color: #ddb364;
 }
 
 .unlimited-decks-buttons {
-    margin-top: 10px;
+	margin-top: 10px;
 }
 .unlimited-decks-buttons .unlimited-decks-button {
-    width: 15mm;
-    height: 20mm;
-    position: relative;
-    font-size: 18px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    border-radius: 5px;
-    box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
+	width: 15mm;
+	height: 20mm;
+	position: relative;
+	font-size: 18px;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	border-radius: 5px;
+	box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
 }
 .unlimited-decks-buttons .unlimited-decks-button .label-text {
-    position: absolute;
-    top: -5px;
-    right: -5px;
-    font-size: 0.8rem;
-    font-weight: 600;
-    padding: 2px 5px;
-    border-radius: 5px;
+	position: absolute;
+	top: -5px;
+	right: -5px;
+	font-size: 0.8rem;
+	font-weight: 600;
+	padding: 2px 5px;
+	border-radius: 5px;
 }
 
 .unlimited-decks-buttons .unlimited-decks-button.hand .label-text {
-    background-color: #7a861f;
-    color: #fff;
+	background-color: #7a861f;
+	color: #fff;
 }
 .unlimited-decks-buttons .unlimited-decks-button.discard .label-text {
-    background-color: #999898;
-    color: #333;
+	background-color: #999898;
+	color: #333;
 }
 .unlimited-decks-buttons .unlimited-decks-button.deck .label-text {
-    background-color: #14578c;
-    color: #fff;
+	background-color: #14578c;
+	color: #fff;
 }
 .unlimited-decks-buttons .unlimited-decks-button.info .label-text {
-    background-color: #725233;
-    color: #fff;
+	background-color: #725233;
+	color: #fff;
 }
 .unlimited-decks-buttons .unlimited-decks-button.hand {
-    --button-bg: #cddc39;
-    background-color: var(--button-bg);
+	--button-bg: #cddc39;
+	background-color: var(--button-bg);
 }
 .unlimited-decks-buttons .unlimited-decks-button.discard {
-    --button-bg: #f3f3f3;
-    background-color: var(--button-bg);
+	--button-bg: #f3f3f3;
+	background-color: var(--button-bg);
 }
 .unlimited-decks-buttons .unlimited-decks-button.deck {
-    --button-bg: #2194ed;
-    background-color: var(--button-bg);
-    color: #fff;
+	--button-bg: #2194ed;
+	background-color: var(--button-bg);
+	color: #fff;
 }
 .unlimited-decks-buttons .unlimited-decks-button.info {
-    --button-bg: #ddb364;
-    background-color: var(--button-bg);
-    color: #fff;
+	--button-bg: #ddb364;
+	background-color: var(--button-bg);
+	color: #fff;
 }
 .unlimited-decks-buttons .unlimited-decks-button.info span.league {
-    color: #303030;
+	color: #303030;
 }
 .unlimited-decks-buttons .unlimited-decks-button::after {
-    background-color: var(--button-bg);
-    content: '';
-    position: absolute;
-    top: -10px;
-    left: -10px;
-    width: 100%;
-    height: 100%;
-    border-radius: inherit;
-    z-index: -1;
+	background-color: var(--button-bg);
+	content: '';
+	position: absolute;
+	top: -10px;
+	left: -10px;
+	width: 100%;
+	height: 100%;
+	border-radius: inherit;
+	z-index: -1;
 }
 
 @media only screen and (max-width: 768px) {
-    .mega-container.group .cards-container{
-        display: grid;
-        grid-template-columns: repeat(2, 0fr);
-    }
-    .cards-container.slider {
-        display: flex;
-        grid-template-columns: unset;
-        width: 100%;
-        display: flex;
-        overflow-x: auto;
-        overflow-y: hidden;
-        min-height: 350px;
-        scroll-snap-type: x mandatory;
-        scroll-behavior: smooth;
-    }
+	.mega-container.group .cards-container {
+		display: grid;
+		grid-template-columns: repeat(2, 0fr);
+	}
+	.cards-container.slider {
+		display: flex;
+		grid-template-columns: unset;
+		width: 100%;
+		display: flex;
+		overflow-x: auto;
+		overflow-y: hidden;
+		min-height: 350px;
+		scroll-snap-type: x mandatory;
+		scroll-behavior: smooth;
+	}
 
-    .cards-container.slider .slide {
-        scroll-snap-align: start;
-        width: 100%;
-        object-fit: cover;
-    }
+	.cards-container.slider .slide {
+		/* transform: translateX(-50%); */
+		scroll-snap-align: start;
+		padding: 0 80px;
+		width: 100%;
+		object-fit: cover;
+	}
+	.group .cards-container.slider .slide {
+		/* transform: translateX(-50%); */
+		scroll-snap-align: start;
+		padding: 0;
+		width: 100%;
+		object-fit: cover;
+	}
 
-    .slider::-webkit-scrollbar {
-        display: none;
-    }
+	.slider::-webkit-scrollbar {
+		display: none;
+	}
 }
