--- a/src/globals.css
+++ b/src/globals.css
@@ -403,7 +403,7 @@ a {
 	/* aspect-ratio: 9 / 16; */
 	min-height: 50px;
 	padding: 5px;
-	box-shadow: 0 0 100px 2px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
 	border-radius: 5px;
 	z-index: 5;
 }
@@ -413,7 +413,7 @@ a {
 	font-family: 'bebas', sans-serif;
 }
 .box .title::after {
-	content: "";
+	content: '';
 	display: block;
 	width: 5%;
 	height: 5px;
