--- a/src/pages/assets/circles.css
+++ b/src/pages/assets/circles.css
@@ -1,48 +1,63 @@
 .flex {
 	display: flex;
 }
+
 .flex .padded {
 	padding: 10px;
 }
+
 .flex.gap {
 	gap: 10px;
 }
+
 .flex.wrap {
 	flex-wrap: wrap;
 }
+
 .flex.column {
 	flex-direction: column;
 }
+
 .flex.row {
 	flex-direction: row;
 }
+
 .flex.center {
 	justify-content: center;
 }
+
 .flex.between {
 	justify-content: space-between;
 }
+
 .flex.around {
 	justify-content: space-around;
 }
+
 .flex.evenly {
 	justify-content: space-evenly;
 }
+
 .flex.end {
 	justify-content: flex-end;
 }
+
 .flex.start {
 	justify-content: flex-start;
 }
+
 .flex.align.end {
 	align-items: flex-end;
 }
+
 .flex.align.starts {
 	align-items: flex-start;
 }
+
 .flex.align.center {
 	align-items: center;
 }
+
 .flex.align.baseline {
 	align-items: baseline;
 }
@@ -50,9 +65,11 @@
 .relative {
 	position: relative;
 }
+
 .absolute {
 	position: absolute;
 }
+
 .fixed {
 	position: fixed;
 }
@@ -70,6 +87,7 @@
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	padding: 0px;
 }
+
 .bg.circle {
 	margin: 0px;
 	/* background-image: radial-gradient(
@@ -81,6 +99,7 @@
 	/* background-position: center;
 background-size: cover; */
 }
+
 /* .bg.circle#bg-circle {
 transform: rotate(-90deg);
 } */
@@ -90,6 +109,7 @@ transform: rotate(-90deg);
 	background-repeat: no-repeat;
 	background-clip: border-box;
 }
+
 .circunference.center {
 	position: absolute;
 	top: 50%;
@@ -102,17 +122,20 @@ transform: rotate(-90deg);
 	border: 1px solid #fff;
 	z-index: 1;
 }
+
 .cool-polygon {
 	background-image: url('https://img.podcastone.com/images/2142/episodes/274160761_964691301083883_8078302016993390838_n.jpg');
 	clip-path: polygon(50% 0%, 0% 50%, 50% 100%, 100% 50%);
 	background-size: cover;
 	background-position: center;
 }
+
 .cc {
 	position: absolute;
 	top: 0px;
 	left: 0px;
 }
+
 .fg.circle {
 	z-index: 1;
 	background-image: url('https://wallpaper-mania.com/wp-content/uploads/2018/09/High_resolution_wallpaper_background_ID_77701518650.jpg');
@@ -133,6 +156,7 @@ transform: rotate(-90deg);
 	transform: translate(-50%, 0);
 	padding: 0 25px;
 }
+
 .polygon {
 	clip-path: polygon(54% 0%, 78% 50%, 54% 100%, 25% 100%, 24% 0%, 28% 0%);
 }
@@ -146,15 +170,18 @@ html {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	background-color: #f1f1f1;
+	background-color: #fff;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 .container {
 	height: 100vh;
 }
+
 .block {
 	display: block;
 }
+
 .panel {
 	height: 100%;
 	flex-shrink: unset;
@@ -177,6 +204,7 @@ h3.title,
 	padding: 0;
 	text-transform: capitalize;
 }
+
 h3.title:after,
 .title:after {
 	content: '';
@@ -190,6 +218,7 @@ h3.title:after,
 .options {
 	padding: 10px 30px;
 }
+
 .subtitle {
 	position: relative;
 	margin: 0;
@@ -199,12 +228,14 @@ h3.title:after,
 	text-transform: uppercase;
 	color: #ababab;
 }
+
 .unmatched.custom.label {
 	width: 100%;
 	font-size: 1rem;
 	font-weight: 400;
 	color: #313131;
 }
+
 .unmatched.custom.input {
 	width: 100%;
 	outline: none;
@@ -214,12 +245,15 @@ h3.title:after,
 	font-weight: 400;
 	color: #ababab;
 }
+
 .opt-group {
 	margin-bottom: 60px;
 }
+
 .down {
 	margin-bottom: 40px;
 }
+
 .input-container {
 	width: 65%;
 	display: flex;
@@ -228,6 +262,7 @@ h3.title:after,
 	gap: 25px;
 	padding: 10px;
 }
+
 .input-container.no-gap {
 	gap: 0;
 }
@@ -243,6 +278,7 @@ h3.title:after,
 	cursor: pointer;
 	transition: all 0.3s ease;
 }
+
 .deck-dial-name {
 	background-color: #ffffff;
 	color: #707070;
@@ -256,6 +292,7 @@ h3.title:after,
 	transition: all 0.3s ease;
 	outline: none;
 }
+
 .btn.download:hover {
 	border-radius: 0 15px 15px 0;
 }
@@ -263,9 +300,11 @@ h3.title:after,
 .dials .relative.dials-box {
 	padding: 30px;
 }
+
 .relative.circle .dissapear {
 	visibility: hidden;
 }
+
 .relative.circle#dialBack .input,
 .relative.circle#dialFront .input {
 	visibility: hidden;
@@ -301,6 +340,7 @@ h3.title:after,
 	overflow: hidden;
 	z-index: 3;
 }
+
 .btn.download.file.container input[type='file'] {
 	position: absolute;
 	top: 0;
@@ -312,6 +352,7 @@ h3.title:after,
 	cursor: pointer;
 	overflow: hidden;
 }
+
 .frontal-dial::after {
 	content: '';
 	position: absolute;
@@ -325,9 +366,11 @@ h3.title:after,
 	clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
 	z-index: 2;
 }
+
 .relative.circle:hover .dissapear {
 	visibility: visible;
 }
+
 .relative.circle#dialFront:hover .input,
 .relative.circle#dialBack:hover .input {
 	visibility: visible;
