feat: fixed disposition of letters in dials page

--- a/src/pages/assets/circles.css
+++ b/src/pages/assets/circles.css
@@ -103,6 +103,19 @@ background-size: cover; */
 /* .bg.circle#bg-circle {
 transform: rotate(-90deg);
 } */
+
+.bg.circle .letters-container {
+	width: 100%;
+	height: 100%;
+	padding: 5px;
+	background: inherit;
+	border-radius: 50%;
+	position: absolute;
+	top: 50%;
+	left: 0;
+	transform: translateY(-50%);
+}
+
 .bg.circle.background-image {
 	background-position: center;
 	background-size: cover;
