--- a/src/globals.css
+++ b/src/globals.css
@@ -424,7 +424,7 @@ a {
 	padding: 5px;
 	box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
 	border-radius: 5px;
-	z-index: 5;
+	/* z-index: 5; */
 }
 
 .box .title {
@@ -605,9 +605,19 @@ keyframes show {
 	.mobile-only {
 		display: block;
 	}
-
+	
 	.flex-responsive {
-		flex-direction: column;
 		align-items: center;
+		flex-direction: column;
+	}
+	.flex-responsive-column {
+		flex-direction: column;
+	}
+
+	.responsive-gap-small {
+		gap: 10px;
+	}
+	.responsive-w1 {
+		width: 100%;
 	}
 }
